# fortiface

./: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml  server.py
fortiface/: main.py
fortiface/api/: __init__.py
fortiface/api/routers/: recognition_router.py  register_router.py
fortiface/common/: __init__.py
fortiface/common/utils/: __init__.py  bbox_utils.py  draw_utils.py  frame_utils.py  utils.py
fortiface/core/: milvus_singleton.py  setup_lifspan.py  supported_3rdparty.py
fortiface/modules/: base.py  face_analyze.py  face_recognition.py
fortiface/schemas/: __init__.py  process_schema.py  recognition_schemas.py  register_schemas.py  vector_schemas.py
fortiface/services/: base.py  recognition_services.py  register_services.py
scripts/: open_attu.sh
test/: conftest.py  test_analyze.py  test_embedding.py
