[project]
name = "fortiface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.9.0",
    "deepface>=0.0.93",
    "fastapi[standard]>=0.115.7",
    "pydantic-settings>=2.7.1",
    "pymilvus>=2.5.4",
    "pytest>=8.3.4",
    "tf-keras>=2.18.0",
]
